--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 [2011/03/16]
 1、星际译王(install_stardict_gnome.sh)
 2、飞信(install_openfetian.sh)
+3、curl(install_curl.sh)
 [2011/03/15]
 1、右键菜单中显示终端选项，用于右键打开终端(install_right_terminal.sh)
 2、使用方便的终端工具：terminator(install_terminator.sh)
